# Cybercar-G5-copy

./: .gitignore  README.md  code-of-conduct.md
InputDirection/: CMakeLists.txt  Dockerfile  Dockerfile.armhf  README.md
InputDirection/src/: InputDirection.cpp  messages.odvd
LectureTutorial/: CMakeLists.txt  Dockerfile  Dockerfile.armhf  TestPrimeChecker.cpp  cluon-msc  helloworld.cpp  messages.hpp  messages.odvd
MoveCar/: CMakeLists.txt  Dockerfile  Dockerfile.armhf  README.md
MoveCar/src/: Example.cpp  Follow.cpp  messages.odvd
Recordings_empty_inters_12_oClok/: 12 oClock No posit.rec
accSafeDistance/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  README.md
accSafeDistance/buildbuild/: CMakeCache.txt  Makefile  cluon-complete.cpp  cluon-complete.hpp  cluon-msc  cmake_install.cmake  opendlv-standard-message-set.hpp  safe-distance
accSafeDistance/building/: CMakeCache.txt  Makefile  cluon-complete.cpp  cluon-msc  cmake_install.cmake  opendlv-standard-message-set.hpp  safe-distance
accSafeDistance/localtest/: .local-safe-distance.cpp.kate-swp  CMakeLists.txt  local-safe-distance.cpp  opendlv-standard-message-set-v0.9.6.odvd
accSafeDistance/src/: messages.odvd  opendlv-standard-message-set-v0.9.6.odvd  safe-distance.cpp
accSafeDistance/src/localtest/: CMakeLists.txt  local-safe-distance.cpp  opendlv-standard-message-set-v0.9.6.odvd
bananaDetection/: CMakeLists.txt  Dockerfile.armhf
bananaDetection/localtest/: localBananaDetector.cpp
carDetection/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  README.md
carDetection/localtest/: CMakeLists.txt  local-car-detection.cpp  opendlv-standard-message-set-v0.9.6.odvd
carDetection/src/: car-28-stages.xml  car-detection.cpp  opendlv-standard-message-set-v0.9.6.odvd
carObjectDetection/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
carObjectDetection/localtest/: CMakeLists.txt  cars.xml  localCarObject.cpp  opendlv-standard-message-set-v0.9.6.odvd
carObjectDetection/src/: carObjectDetection.cpp  cars.xml  opendlv-standard-message-set-v0.9.6.odvd
colorTracker/: Dockerfile
deprecatedFeatures/bananaDetection/: Dockerfile.amd64
deprecatedFeatures/bananaDetection/localtest/: CMakeLists.txt  opendlv-standard-message-set-v0.9.6.odvd
deprecatedFeatures/bananaDetection/src/: bananaDetection.cpp  opendlv-standard-message-set-v0.9.6.odvd
deprecatedFeatures/colorTracker/: CMakeLists.txt  README.md  colortrackerexample.cpp
deprecatedFeatures/example_video/src/: image-postprocessing-opencv.cpp
example_video/src/: image-postprocessing-opencv.cpp
recordings/Color-detection/: CID-112-recording-2019-03-22_113158.rec  CID-112-recording-2019-03-22_113239.rec  CID-112-recording-2019-03-22_113307.rec  CID-112-recording-2019-03-22_113335.rec
recordings/New color and intersection/: CID-112-recording-2019-03-22_122022.rec  CID-112-recording-2019-03-22_122421.rec  CID-112-recording-2019-03-22_122456.rec  CID-112-recording-2019-03-22_122643.rec  CID-112-recording-2019-03-22_122742.rec
recordings/StopSignRecognition/: CID-112-recording-2019-03-22_122719.rec  CID-112-recording-2019-03-22_122752.rec
recordings/car-detection/: cardetection.rec
recordings/extra-recs/AAC/: AACshakybeginning.rec  disgustingAAC.rec  terribleAAC.rec
recordings/extra-recs/Recordings_empty_inters_12_oClok/: Close to line sees Stop.rec  On the line and sees Stop.rec
recordings/extra-recs/approach12on3/: approach12on3-better.rec  approach12on3-pausedalittle.rec  approach12on3-shakybeginning.rec  on3on12wtf.rec
recordings/extra-recs/approach9on3/: approaching9andstill3_3nopostit.rec  badon3approach9.rec  crashon3approach9.rec
recordings/extra-recs/emptyIntersection/: 02-emptyjacob.rec  emptyintersection-visiblestopsign.rec
recordings/extra-recs/on3/: on3-longbeginning-yellowpostit.rec  on3-nosign-visible.rec  on3-stopsign-visible-yellow.rec  on3stopsignvisible.rec
recordings/extra-recs/on3approach9/: on3approach9-wrong-order-unstraight.rec  on3approach9-wrongorder.rec
recordings/extra-recs/videocontrolaccrecs/: CID-112-recording-2019-03-22_123803.rec  CID-112-recording-2019-03-22_123909.rec  CID-112-recording-2019-03-22_124040.rec  CID-112-recording-2019-03-22_124108.rec
recordings/submission-recordings/: 01-acc.rec  02-empty.rec  03-car-at-9.rec  04-car-at-12.rec  05-car-at-3.rec  06-car-at-3-and-new-car-at-9.rec  07-car-at-3-and-new-car-at-12.rec
stopSignRecognition/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  README.md
stopSignRecognition/building/: CMakeCache.txt  Makefile  cluon-complete.cpp  cluon-complete.hpp  cluon-msc  cmake_install.cmake  opendlv-standard-message-set.hpp  stop-sign
stopSignRecognition/src/: opendlv-standard-message-set-v0.9.6.odvd  safe-distance.cpp  stop-sign.cpp
stopSignRecognition/src/localtest/: CMakeLists.txt  local-stop-sign.cpp  opendlv-standard-message-set-v0.9.6.odvd
stopSignRecognition/src/localtest/building/: CMakeCache.txt  Makefile  cluon-complete.cpp  cluon-complete.hpp  cluon-msc  cmake_install.cmake  local-stop-sign
yieldSignDetector/: .directory  CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf
yieldSignDetector/localtest/: localBananaDetector.cpp
yieldSignDetector/src/: opendlv-standard-message-set-v0.9.6.odvd  yieldSignDetector.cpp
